OVERFLOW CORRECTION

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 #logo {
   display: flex;
-  width: 23%;
+  width: 5.5rem;
   justify-content: center;
   align-items: center;
   margin: 2rem 0;
@@ -215,7 +215,7 @@ footer {
 
 @media (min-width: 768px) {
     #logo {
-        max-width: 13%;
+        max-width: 6rem;
         margin: 2.1rem 0 1.7rem 0;
       }
       
@@ -286,37 +286,39 @@ footer {
 @media (min-width: 1200px) {
     
 #logo {
-    max-width: 7%;
-    margin: 7rem 0 4.5rem 0;
+    max-width: 6rem;
+    margin: 6rem 0 4rem 0;
   }
   
   .bg-container {
-    width: 67vw;
-    height: 57vh;
+    width: 58rem;
+    max-height: 28rem;
     border-radius: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: space-between;
-    padding: 2rem 1.3rem 2rem 1.3rem;
+    align-items: center;
     margin: 0 0 2em 0rem;
+    padding: 0;
   }
 
   #grid-1 {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1.2rem 1.8rem 1.2rem 0.8rem;
+    max-height: 26rem;
+    justify-content: center;
+    align-self: center;
+    padding: 0rem 1.8rem 0rem 1.3rem;
   }
   
   .tip-container {
     display: flex;
     flex-direction: column;
     padding: 0 0.7rem;
-    margin: 2.5rem 0;
+    margin: 1.5rem 0;
   }
   
   .tip-blocks {
-    margin-block-start: 1.2rem;
+    margin-block-start: 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
@@ -332,11 +334,12 @@ footer {
   
   .green-container {
     grid-area: 1 / 2 / 1 / 2;
+    align-self: center;
     justify-content: space-between;
     padding: 3rem 2.5rem 2.7rem 2.5rem;
-    width: 31vw;
-    height: 50vh;
-    margin: 0 0.7rem;
+    max-width: 27.5rem;
+    height: 25rem;
+    margin: 0;
   }
 
   #tip-am{
